# reqwapy

./: .bumpversion.cfg  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml  pyproject.toml.old
.github/workflows/: cd.yml  ci.yml  gh-pages-docs.yml
benchmarks/: small.json  test_signle.py
benchmarks/server/: app.py  run.py
benchmarks/server/controller/: aiohttp_impl.py  base.py  reqwapy_impl.py
benchmarks/server/data/: small.json
reqwapy/: __init__.py  core.py
src/: client.rs  conversion.rs  lib.rs  rate_limit.rs  response.rs
