[package]
name = "reqwapy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "reqwapy_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.4", features = ["extension-module"] }
pyo3-asyncio = { version = "0.16.0", features = ["tokio-runtime"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.17", features = ["full"] }
serde_json = "1.0"
