[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "reqwapy"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[project.optional-dependencies]
build = [
    "maturin==0.12.6",
]

test = [
    "pytest==7.1.2",
    "certifi==2021.10.8",
    "aiohttp==3.8.1",
    "pytest-benchmark==3.4.1",
    "fastapi==0.78.0",
    "uvicorn[standard]==0.17.6"
]

code-fix = [
    "black==22.3.0",
    "isort==5.10.1",
    "mypy==0.950.0",
    "autoflake==1.4"
]
